k8s/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendr-backend
  namespace: sendr
spec:
  selector:
    app: sendr-backend
  ports:
    - port: 8000
      targetPort: 8000
      name: http
